# DroneSim

./: .gitignore  .gitmodules
TinyMPC/: CMakeLists.txt
TinyMPC/examples/: CMakeLists.txt  example_quadrotor_hovering_cpu.cpp  example_quadrotor_tracking_cpu.cpp
TinyMPC/examples/problem_data/: quadrotor_50hz_params_constrained.hpp  quadrotor_50hz_params_unconstrained.hpp
TinyMPC/include/matlib/: matlib.h  matlib_cpu.h
TinyMPC/include/tinympc/: admm.hpp  types.hpp
TinyMPC/src/: CMakeLists.txt
TinyMPC/src/matlib/: matlib.cpp
TinyMPC/src/tinympc/: admm.cpp
TinyMPC_HLS/: .peers.ini  CMakeLists.txt
TinyMPC_HLS/examples/: CMakeLists.txt  quadrotor_tracking_c.cpp  quadrotor_tracking_hls.cpp
TinyMPC_HLS/examples/problem_data/: quadrotor_100hz_params.hpp  quadrotor_50hz_params.hpp
TinyMPC_HLS/examples/trajectory_data/: quadrotor_100hz_ref_hover.hpp  quadrotor_20hz_ref_hover.hpp
TinyMPC_HLS/include/matlib/: matlib_cpu.h
TinyMPC_HLS/include/tinympc/: admm.hpp  variables.hpp
TinyMPC_HLS/src/: CMakeLists.txt  trackingHost.cpp
TinyMPC_HLS/src/tinympc/: admm.cpp  variables.cpp
TinyMPC_copy/: CMakeLists.txt
TinyMPC_copy/examples/: CMakeLists.txt  example_quadrotor_tracking_cpu.cpp
TinyMPC_copy/examples/problem_data/: quadrotor_20hz_params.hpp
TinyMPC_copy/examples/trajectory_data/: quadrotor_20hz_y_axis_line.hpp
TinyMPC_copy/include/matlib/: matlib.h  matlib_cpu.h
TinyMPC_copy/include/tinympc/: types.hpp  variables.hpp
TinyMPC_copy/src/matlib/: matlib.cpp
TinyMPC_copy/src/tinympc/: admm.cpp  variables.cpp
integration/: arty_utils.py  arty_with_gym.py  arty_wrapper.py  python_wrapper_for_gym.py  test_script.py
integration/results/: save-flight-04.17.2024_22.29.06.npy  save-flight-04.17.2024_22.35.13.npy  save-flight-04.17.2024_22.38.08.npy  save-flight-04.22.2024_20.42.33.npy
integration/results/save-flight-TinyMPC-04.17.2024_22.29.06/: vy0.csv  vz0.csv  y0.csv
integration/results/save-flight-TinyMPC-04.17.2024_22.29.23/: p0.csv  pr0.csv  pwm3-0.csv  r0.csv  wx0.csv  wy0.csv  wz0.csv  x0.csv  z0.csv
integration/results/save-flight-TinyMPC-04.17.2024_22.32.34/: rpm3-0.csv  rr0.csv  vx0.csv  ya0.csv  yar0.csv
integration/results/save-flight-TinyMPC-04.17.2024_22.35.13/: p0.csv  pr0.csv  pwm0-0.csv  pwm1-0.csv  pwm2-0.csv  pwm3-0.csv  r0.csv  rpm0-0.csv  rpm1-0.csv  rpm2-0.csv  rpm3-0.csv  rr0.csv  vx0.csv  vy0.csv  vz0.csv  wx0.csv  wy0.csv  wz0.csv  x0.csv  y0.csv  ya0.csv  yar0.csv  z0.csv
integration/results/save-flight-TinyMPC-04.17.2024_22.38.08/: p0.csv  pwm2-0.csv  pwm3-0.csv  rpm0-0.csv  rpm1-0.csv  rpm3-0.csv  wx0.csv  wy0.csv  wz0.csv  x0.csv  y0.csv
integration/results/save-flight-TinyMPC-04.18.2024_00.29.23/: pr0.csv  pwm0-0.csv  pwm1-0.csv  r0.csv  rpm2-0.csv  rr0.csv  vx0.csv  vy0.csv  vz0.csv  ya0.csv  yar0.csv  z0.csv
integration/results/save-flight-TinyMPC-04.20.2024_23.12.44/: p0.csv  pr0.csv  pwm0-0.csv  pwm1-0.csv  y0.csv  (+8 more)
matlib_opt/: matlib_cpu.cpp  matlib_cpu.h  matlib_cpu_tb.cpp
microblaze/: arty.c
vitis_mpc/design/: admm.cpp  matlib.cpp  testbench_mpc_tb.cpp  top_quadrotor_tracking_hls.cpp  variables.cpp
(+17 files in other folders)
